--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "api/check.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/check", "dest": "/api/check.js" }
+  "rewrites": [
+    {
+      "source": "/check",
+      "destination": "/api/check.js"
+    }
   ]
 }
